--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
 //npm.pkg.github.com/:_authToken=d5f2789565593b833107effec53fcd69b5b9a025
-registry=https://npm.pkg.github.com/@farhanfdk
+registry=https://npm.pkg.github.com/farhanfdk
