--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-pwa",
+  "name": "simplepwa",
   "version": "1.0.0",
   "description": "A free template for PWA.",
   "main": "index.html",
